# roost

./: Cargo.toml  DESIGN-control.md  DESIGN-ui.md  DESIGN.md  EXPERIMENT.md  README.md  REVIEW.md  ROADMAP.md
.claude/agents/: design-supervisor.md
docs/: index.html  tui-design.html
extensions/: claude-code-hooks.md  roost.ts
src/: app.rs  cli.rs  event.rs  input.rs  main.rs  pane.rs  ports.rs  render.rs  sock.rs  status.rs  workspace.rs
src/adapters/: claude.rs  mod.rs  pi.rs  shell.rs
src/agents/: claude.rs  mod.rs  pi.rs
src/core/: app.rs  control.rs  event.rs  layout.rs  mod.rs  status.rs  workspace.rs
src/infra/: clipboard.rs  extension.rs  inspect.rs  kitty.rs  mod.rs  notify.rs  open.rs  pty.rs  sock.rs  store.rs
src/ui/: input.rs  mod.rs  mouse.rs  render.rs  theme.rs
tests/: firehose.rs  live_qa.rs
tests/harness/: mod.rs
