[package]
name = "roost"
version = "0.1.0"
edition = "2021"
description = "A session-native terminal multiplexer for AI agent CLIs (pi, Claude Code, ...). No daemon: layouts and session IDs persist; processes are disposable."
license = "MIT"

[dependencies]
anyhow = "1"
crossterm = "0.28"
dirs = "5"
fs2 = "0.4"
libc = "0.2"
portable-pty = "0.8"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
vt100 = { path = "vendor/vt100" }

# roost is a binary crate: integration tests under tests/ can't `use` its
# modules, so the PTY test harness (tests/harness/mod.rs) drives the built
# binary from the outside and needs its own PTY + terminal-parser deps. Same
# versions/paths as the main deps above — no new third-party code.
[dev-dependencies]
portable-pty = "0.8"
vt100 = { path = "vendor/vt100" }

[profile.release]
lto = true
strip = true
